DI, retrofit setup, moved in icons

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,6 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+# Apixu weather ApiKey
+#WeatherApp_ApiKey = "92d7c369ddc94b89b2762828191503"
